# calculator-lib

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: functional_tests.yaml  lint.yaml  publish.yaml  unit_tests.yaml
docs/: changelog.md  conf.py  index.rst  quick_start.md
src/calculator/: __init__.py  _image.py  _utils.py  add.py  subtract.py
tests/functional/: add_mnist_test.py
tests/unittests/: add_test.py  image_test.py  subtract_test.py
