[project]
name = "calculator-nico"
version = "0.2.0"
description = "Python library to compute things."
authors = [
    {name = "NicolasGensollen",email = "nicolas.gensollen@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.0.0)"
]

[tool.poetry]
packages = [
    { include = "calculator", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.0"
pre-commit = "^4.2.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.6.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["calculator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
